--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "element-plus": "^1.1.0-beta.9",
     "vue": "^3.2.6",
     "vue-router": "4.0.11",
     "vuex": "4.0.2"
@@ -15,6 +16,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.6.0",
     "@vue/compiler-sfc": "^3.2.6",
+    "element-theme-chalk": "^2.15.6",
+    "element-themex": "^1.0.3",
     "typescript": "^4.3.2",
     "vite": "^2.5.2",
     "vue-tsc": "^0.2.2"
